Fix date flow under title on mobile (#8)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,7 @@
 }
 
 @utility container {
-  padding-inline: 2.5rem;
+  padding-inline: 2rem;
 }
 
 /*
